--- a/css/overview.css
+++ b/css/overview.css
@@ -5,8 +5,8 @@
 }
 
 .full-width-img{
-    width: 90%;
-    margin-left: 5%;
+    width: 100%;
+    margin-left: 0%;
     margin-bottom: 0px;
     margin-top: 100px;
 }
@@ -49,7 +49,7 @@ body{
     color: #4D4726;
     font-size: 12px;
     line-height: 1.5;
-    margin-left: 5%;
+    margin-left: 0%;
     margin-top: 15px;
     margin-bottom: 50px;
 }
@@ -68,7 +68,7 @@ body{
 
 .bodycopy-right{
    width: 45%;
-    margin-left: 35%;
+    margin-left: 40%;
     margin-bottom: 80px;
     margin-top: 100px;
     border-left: 0.5px solid white;
@@ -96,11 +96,19 @@ body{
 
  .bodycopy-right-black{
     width: 45%;
-     margin-left: 35%;
+     margin-left: 40%;
      margin-bottom: 80px;
      margin-top: 100px;
      border-left: 0.5px solid #4D4726;
      padding-left: 50px;
+ }
+
+ .bodycopy-left-black p{
+    color: #4D4726;
+     }
+
+ .bodycopy-right-black p{
+color: #4D4726;
  }
 
 
@@ -131,12 +139,12 @@ body{
 
 .medium-img-right{
     width: 60%;
-    margin-left: 35%;
+    margin-left: 40%;
 
 }
 
 .medium-img-right-caption{
-    margin-left: 35%;
+    margin-left: 40%;
     margin-top: 15px;
     margin-bottom: 100px;
     color: white;
