--- a/css/overview.css
+++ b/css/overview.css
@@ -1,5 +1,5 @@
 #fleming-joffe{
-    background-color: #3f3b1e;
+    background-color: #3f3b22;
     padding-top: 50px;
     padding-bottom: 100px;
 }
@@ -50,7 +50,7 @@ body{
 .section-header-olive{
     position: absolute;
     text-align: center;
-    margin-top: -30%;
+    margin-top: -35%;
     width: 90%;
 }
 
