--- a/css/overview.css
+++ b/css/overview.css
@@ -1,5 +1,5 @@
 #fleming-joffe{
-    background-color: #3f3b22;
+    background-color: #3c3820;
     padding-top: 50px;
     padding-bottom: 100px;
 }
@@ -33,6 +33,12 @@ h2{
     font-weight: normal;
     text-align: center;
     font-family: "EdelmanChromatic-GrotesqueRegular" !important;
+}
+
+.andy-header{
+    line-height: 1.2;
+    text-align: left;
+    color: #4D4726;
 }
 
 body{
@@ -99,6 +105,22 @@ body{
 
 }
 
+#left-half-andy{
+    width: 30%;
+    padding-left: 10px;
+}
+
+#right-half-andy{
+    width: 70%;
+}
+
+.intro-text{
+    width: 70%;
+    margin-left: 20%;
+    border-left: 1px solid #4D4726;
+    padding-left: 50px;
+}
+
 .bodycopy-left{
     width: 45%;
      margin-left: 20%;
@@ -116,6 +138,8 @@ body{
      border-left: 0.5px solid #4D4726;
      padding-left: 50px;
  }
+
+
 
  .bodycopy-right-black{
     width: 45%;
@@ -267,6 +291,8 @@ margin-bottom: 100px;
     width: 49%;
   }
 
+
+
   #right-half img{
     width: 100%;
   }
@@ -296,4 +322,13 @@ margin-bottom: 100px;
   #scroll-to-top p a:hover{
     text-decoration-color: #4D4726;
     color: #4D4726;
+  }
+
+  #canvas{
+display: block;
+margin-top: 70px;
+width: 100%;
+height: 100vh;
+background-color: white;
+border: 1px solid #4D4726;
   }
