--- a/css/overview.css
+++ b/css/overview.css
@@ -2,6 +2,7 @@
     background-color: #3c3820;
     padding-top: 50px;
     padding-bottom: 100px;
+    margin-top: 70px;
 }
 
 .full-width-img{
@@ -9,7 +10,7 @@
     height: 40%;
     margin-left: 0%;
     margin-bottom: 0px;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .full-width-img-olive{
@@ -200,18 +201,19 @@ color: #4D4726;
 
 
 .image-scroll img{
-    height: 320px;
+    height: 28vh;
+    padding-left: 10px;
 }
 
 .image-scroll-two img{
-    height: 320px;
+    height: 28vh;
 }
 
 .image-scroll{
 margin-top: 120px;
 margin-left: 3vw;
 width: 90%;
-margin-bottom: 100px;
+margin-bottom: 150px;
 }
 
 .image-scroll-two{
