--- a/css/styles.css
+++ b/css/styles.css
@@ -10242,7 +10242,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 body {
     font: 14px/20px "MaharamNeue-Regular", Helvetica, Arial, sans-serif;
-    background:#edede8
+    background:#ffffff
 }
 
 .container {
@@ -13499,7 +13499,7 @@ body {
 }
 
 .container {
-    background:#edede8;
+    background:#ffffff;
 }
 
 p a {
